--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -182,8 +182,9 @@ button:disabled {
     padding: 12px 24px 0 24px;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 480px) {
-	#joinForm {
-		font-size: 40px;
+@media only screen and (max-width: 480px) {
+   body, #joinForm, .chat {
+		font-size: 200%;
 	}
+	
 }
